src/objects/OrderApi__Catalog_Item__c.object
<CustomObject>
    <description>Item listings control how a particular Item is presented in a Item Catalog</description>
    <fields>
        <fullName>OrderApi__Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Link to related Catalog</description>
        <inlineHelpText>**Required** Link to related Catalog</inlineHelpText>
        <label>Catalog</label>
        <referenceTo>OrderApi__Catalog__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Catalog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Item will be featured when using display types that support featured items.</description>
        <inlineHelpText>When checked, the Item will be featured when using display types that support featured items.</inlineHelpText>
        <label>Is Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Is Published is unchecked when the linked Item &quot;Is Active&quot; is unchecked. When checked, the Item &quot;Listing&quot; is included when results are retrieved via the API for E-Store integrations. Defaults checked for &quot;Active&quot; Items.</description>
        <inlineHelpText>** System Calculated Override ** Is Published is unchecked when the linked Item &quot;Is Active&quot; is unchecked. When checked, the Item &quot;Listing&quot; is included when results are retrieved via the API for E-Store integrations. Defaults checked for &quot;Active&quot; Items.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Link to related Item</description>
        <inlineHelpText>**Required** Link to related Item</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Catalogs</relationshipLabel>
        <relationshipName>Catalog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Catalog Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Catalog Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>